--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Main project script. -->
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="public/js/Main.js"></script>
 </body>
 
 </html>
