Changed file format to get rid of weird vscode error and made a second animation for drawing and flipping a card during war

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Main project script. -->
-    <script type="module" src="public/js/Main.js"></script>
+    <script type="module" src="/src/js/Main.js"></script>
 </body>
 
 </html>
