--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <!-- Main project script. -->
     <script type="module" src="/src/js/Main.js"></script>
+    <div id="warPopup"></div>
 </body>
 
 </html>
