Feat: Added a GUI Base for later modifications

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>War Game</title>
     <link rel="stylesheet" href="style.css">
@@ -12,6 +13,15 @@
     <!-- Main project script. -->
     <script type="module" src="/src/js/Main.js"></script>
     <div id="warPopup"></div>
+    <!-- Start Game GUI -->
+    <div class="gui-container">
+        <div id="guiCanvas">
+            <div class="gui-content">
+                <h1> War Game</h1>
+                <button id="startButton">START GAME</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
